--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -72,7 +72,7 @@
                                 <li>
                                     <button type="submit"
                                         name="language"
-                                        style="border: none; padding: 5; background: none;"
+                                        style="border: none; padding: 5px; background: none;"
                                         value="{{ language.code }}"
                                         class="{% if language.code == LANGUAGE_CODE %}selected{% endif %}">
                                         {% if language.code == 'ru' %}
