--- a/igwcoeffs/templates/igwcoeffs/base.html
+++ b/igwcoeffs/templates/igwcoeffs/base.html
@@ -42,7 +42,7 @@
     <footer class="container text-center">
         <p class="pull-left"><a href="{% url 'home' %}">{% trans "Back to LMNAD" %}</a></p>
         <p class="pull-right"><a href="#">{% trans "Back to top" %}</a></p>
-        <p>© <a href="{% url 'home' %}">LMNAD</a> 2017 </p>
+        <p>© <a href="{% url 'home' %}">LMNAD</a> 2017-2018 </p>
     </footer>
 </body>
 </html>
