--- a/lmnad/templates/lmnad/home.html
+++ b/lmnad/templates/lmnad/home.html
@@ -1,10 +1,7 @@
 {% extends 'lmnad/base.html' %}
 
 {% block content %}
-    <h3 class="page-header">{{ home.title }}
-        <br>
-        <small>(Laboratory of Modeling of Natural and Anthropogenic Disasters)</small>
-    </h3>
+    <h3 class="page-header">{{ home.title }}</h3>
     <p class="text">
          {{ home.text | safe  }}
     </p>
