--- a/igwatlas/templates/igwatlas/map.html
+++ b/igwatlas/templates/igwatlas/map.html
@@ -3,7 +3,8 @@
 {% load i18n %}
 
 {% block content %}
-     <div class="container" style="margin-top:70px">
+     <div class="container">
+         <br>
          <div class="row">
              <div class="col-sm-12">
                 <div class="text-center">
