--- a/igwatlas/templates/igwatlas/sources.html
+++ b/igwatlas/templates/igwatlas/sources.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-    <div class="container" style="margin-top:50px">
+    <div class="container" >
         <div class="row">
             <h3 class="page-header"> {% trans "Sources" %} </h3>
         </div>
