--- a/lmnad/static/lmnad/style.css
+++ b/lmnad/static/lmnad/style.css
@@ -13,15 +13,18 @@ body {
 }
 
 .logo {
-    width: 145px;
-    height: 45px;
+    width: 50px;
+    height: 44px;
+}
+
+.lang {
+    min-width: 44px; !important;
 }
 
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 50px;
     background-color:#dddddd;
     color: #000;
     font-size: 13px;
