--- a/lmnad/templates/lmnad/events.html
+++ b/lmnad/templates/lmnad/events.html
@@ -2,8 +2,9 @@
 {% load i18n %}
 
 {% block content %}
-<h3 class="page-header">{% trans "Events" %}</h3>
-    {% for event in events|dictsortreversed:"date" %}
+    <h3 class="page-header">{% trans "Events" %}</h3>
+    <div class="row">
+        {% for event in events %}
         {% if event.full_text %}
             <h3><a href="{{ event.get_absolute_url }}"> {{ event.title }} </a></h3>
         {% else %}
@@ -11,11 +12,33 @@
         {% endif %}
         <p>
             {{ event.text | safe  }}
-            <br>
             <small><b>{{ event.date }}</b></small>
         </p>
         <hr>
-    {% empty %}
-        <p>{% trans "No events" %}</p>
-    {% endfor %}
+        {% empty %}
+            <p>{% trans "No events" %}</p>
+        {% endfor %}
+
+        {% if events.has_other_pages %}
+              <ul class="pagination">
+                {% if events.has_previous %}
+                  <li><a href="?page={{ events.previous_page_number }}">&laquo;</a></li>
+                {% else %}
+                  <li class="disabled"><span>&laquo;</span></li>
+                {% endif %}
+                {% for i in events.paginator.page_range %}
+                  {% if events.number == i %}
+                    <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                  {% else %}
+                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                  {% endif %}
+                {% endfor %}
+                {% if events.has_next %}
+                  <li><a href="?page={{ events.next_page_number }}">&raquo;</a></li>
+                {% else %}
+                  <li class="disabled"><span>&raquo;</span></li>
+                {% endif %}
+              </ul>
+        {% endif %}
+    </div>
 {% endblock %}
