--- a/tank/templates/tank/base.html
+++ b/tank/templates/tank/base.html
@@ -11,36 +11,109 @@
 
     <!-- css files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css" rel="stylesheet" integrity="sha384-HzUaiJdCTIY/RL2vDPRGdEQHHahjzwoJJzGUkYjHVzTwXFQ2QN/nVgX7tzoMW3Ov" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/css/bootstrap-datepicker3.min.css" rel="stylesheet" />
+
+    <link rel="stylesheet" type="text/css" href="{% static 'shadowbox_js/shadowbox.css' %}">
+    <script type="text/javascript" src="{% static 'shadowbox_js/shadowbox.js' %}"></script>
+
+    <style>
+        html {
+          position: relative;
+          min-height: 100%;
+        }
+
+        body {
+          margin-bottom: 50px;
+        }
+
+        /* Remove the navbar's default margin-bottom and rounded borders */
+        .navbar {
+            margin-bottom: 0;
+            border-radius: 0;
+        }
+
+        .logo {
+            width: 50px;
+            height: 44px;
+        }
+
+        .lang {
+            min-width: 44px; !important;
+        }
+
+        footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background-color:#dddddd;
+            color: #000;
+            font-size: 13px;
+            padding: 10px;
+        }
+
+        .jumbotron {
+            background-image: url("{% static 'igwatlas/WestCentralAfrica_f7.png' %}");
+            background-color: #17234E;
+            margin-bottom: 0;
+            min-height: 50%;
+            background-repeat: no-repeat;
+            background-position: center;
+            -webkit-background-size: cover;
+            background-size: cover;
+            color: #ffffff;
+        }
+
+        #map {
+            width:100%;
+            height:600px
+        }
+    </style>
 
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="//api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
+    <script src="{% static 'igwatlas/igwatlas.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/js/bootstrap-datepicker.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    {% get_current_language as LANGUAGE_CODE %}
+    {% get_available_languages as LANGUAGES %}
+    {% get_language_info_list for LANGUAGES as languages %}
+
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'tank_exp' %}">{% trans 'Experimental basin' %}</a>
+                <a class="navbar-left" href="{% url 'home' %}">
+                    <img class="logo" src="{% static 'lmnad/logo_new.png' %}" alt="LMNAD">
+                </a>
+                <a class="navbar-brand" href="{% url 'tank_exp' %}"> {% trans 'Experimental basin' %} </a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'tank_exp' %}"> {% trans "Experiments" %} </a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <li>
-                      <a>
-                      <form action="{% url 'set_language' %}" method="post">
+              <ul class="nav navbar-nav">
+                <li><a href="{% url 'tank_exp' %}"> {% trans "Experiments" %} </a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        {% if LANGUAGE_CODE == 'ru' %}
+                            <img src="{% static 'lmnad/flag_ru.png' %}" title="Russian">
+                        {% else %}
+                            <img src="{% static 'lmnad/flag_en.png' %}" title="English">
+                        {% endif %}
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu lang">
+                        <form action="{% url 'set_language' %}" method="post">
                         {% csrf_token %}
-                        <input name="next" type="hidden" value="{{ request.get_full_path|slice:'3:' }}" />
-                        <ul class="nav navbar-nav navbar-right language menu">
-                            {% get_current_language as LANGUAGE_CODE %}
-                            {% get_available_languages as LANGUAGES %}
-                            {% get_language_info_list for LANGUAGES as languages %}
                             {% for language in languages %}
                                 <li>
                                     <button type="submit"
@@ -56,11 +129,24 @@
                                     </button>
                                 </li>
                             {% endfor %}
-                        </ul>
-                      </form>
-                      </a>
+                        </form>
+                    </ul>
                   </li>
-                </ul>
+                {% if user.is_authenticated %}
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{ user.username }} <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="{{ user.get_absolute_url }}">{% trans "My account" %}</a></li>
+                      <li><a href="{% url 'change_password' %}">{% trans "Change password" %}</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="{% url 'logout' %}">{% trans "Log out" %}</a></li>
+                    </ul>
+                  </li>
+                {% else %}
+                    <li><a href="{% url 'register' %}">{% trans "Sign up" %}</a></li>
+                    <li><a href="{% url 'login' %}">{% trans "Log in" %}</a></li>
+                {% endif %}
+              </ul>
             </div>
         </div>
     </nav>
@@ -69,10 +155,13 @@
     {% endblock %}
 
     <!-- FOOTER -->
-    <footer class="container text-center">
-        <p class="pull-left"><a href="{% url 'home' %}">{% trans "Back to LMNAD" %}</a></p>
-        <p class="pull-right"><a href="#">{% trans "Back to top" %}</a></p>
+    <footer class="container-fluid text-center">
+        <p class="pull-left"><a href="{% url 'home' %}">Back to LMNAD</a></p>
+        <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© <a href="{% url 'home' %}">LMNAD</a> 2017-2018 </p>
     </footer>
 </body>
 </html>
+
+{% load staticfiles %}
+{% load i18n %}
