--- a/tank/templates/tank/experiments.html
+++ b/tank/templates/tank/experiments.html
@@ -3,7 +3,9 @@
 {% load i18n %}
 
 {% block content %}
-    <div class="container" style="margin-top:60px">
+    <div class="container">
+        <br>
+        {% if experiments %}
         <div class="row">
             <div class="text-center">
                     <form class="form-inline" action="/tank_exp" method="get">
@@ -55,5 +57,10 @@
               </ul>
             {% endif %}
         </div>
+        {% else %}
+            <div class="row">
+                <h3>{% trans "Coming soon..." %}</h3>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
