--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -66,6 +66,18 @@
             width:100%;
             height:600px
         }
+
+        .modal-body .form-horizontal .col-sm-2,
+        .modal-body .form-horizontal .col-sm-10 {
+            width: 100%;
+        }
+
+        .modal-body .form-horizontal .control-label {
+            text-align: left;
+        }
+        .modal-body .form-horizontal .col-sm-offset-2 {
+            margin-left: 15px;
+        }
     </style>
 
     <!-- scripts -->
@@ -152,8 +164,22 @@
         </div>
     </nav>
 
-    {% block content %}
-    {% endblock %}
+    {% if not user.is_authenticated and project.is_only_user %}
+        <div class="container">
+            <div class="row">
+                <h4>{% trans 'Access denied' %}</h4>
+                <hr>
+                <p> {% trans 'Create new user:' %}
+                    <a href="{% url 'register' %}">{% trans "Sign up" %}</a>
+                    {% trans 'or' %}
+                    <a href="{% url 'login' %}">{% trans "Log in" %}</a>
+                </p>
+            </div>
+        </div>
+    {% else %}
+        {% block content %}
+        {% endblock %}
+    {% endif %}
 
     <!-- FOOTER -->
     <footer class="container-fluid text-center">
