--- a/tank/templates/tank/experiment_details.html
+++ b/tank/templates/tank/experiment_details.html
@@ -10,7 +10,7 @@
             {% if experiment.images.all %}
                 <h4 class="page-header">{% trans 'Images' %} </h4>
                 {% for image in experiment.images.all %}
-                    <a href="{{ image.file.url }}" rel="shadowbox[Vacation]">{{ image.file|getfilename }}</a>
+                    <a href="{{ image.file.url }}" rel="shadowbox[Mixed]">{{ image.file|getfilename }}</a>
                 {% endfor %}
                 <hr>
             {% endif %}
