Bugfix - logo old style

--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -36,6 +36,11 @@
             height: 44px;
         }
 
+        .logo_old {
+            width: 120px;
+            height: 44px;
+        }
+
         .lang {
             min-width: 44px; !important;
         }
