--- a/lmnad/static/lmnad/style.css
+++ b/lmnad/static/lmnad/style.css
@@ -17,6 +17,11 @@ body {
     height: 44px;
 }
 
+.logo_old {
+    width: 120px;
+    height: 44px;
+}
+
 .lang {
     min-width: 44px; !important;
 }
