--- a/tank/templates/tank/base.html
+++ b/tank/templates/tank/base.html
@@ -39,6 +39,11 @@
             height: 44px;
         }
 
+        .logo_old {
+            width: 120px;
+            height: 44px;
+        }
+
         .lang {
             min-width: 44px; !important;
         }
