Bugfix - tank image

--- a/tank/templates/tank/experiment_details.html
+++ b/tank/templates/tank/experiment_details.html
@@ -50,7 +50,7 @@
                 <hr>
             {% endif %}
             <!--
-            {% if experiment.data.all %}
+            {% if images %}
                 <h4 class="page-header">{% trans 'Files' %} </h4>
                 <ul>
                 {% for d in experiment.data.all %}
