Bugfix - fix logo

--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -106,7 +106,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-left" href="{% url 'home' %}">
-                    <img class="logo" src="{% static 'lmnad/logo_new.png' %}" alt="LMNAD">
+                    <img class="logo_old" src="{% static 'lmnad/logo_comp.png' %}" alt="LMNAD">
                 </a>
                 <a class="navbar-brand" href="{% url 'igwatlas' %}" >
                     IGWAtlas
