--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -33,10 +33,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-left" href="{% url 'home' %}">
-                <img class="logo" src="{% static 'lmnad/logo_new.png' %}" alt="LMNAD">
-            </a>
-            <a class="navbar-brand" href="{% url 'home' %}" >
-                LMNAD
+                <img class="logo_old" src="{% static 'lmnad/logo_comp.png' %}" alt="LMNAD">
             </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
