--- a/tank/templates/tank/base.html
+++ b/tank/templates/tank/base.html
@@ -78,7 +78,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-left" href="{% url 'home' %}">
-                    <img class="logo" src="{% static 'lmnad/logo_new.png' %}" alt="LMNAD">
+                    <img class="logo_old" src="{% static 'lmnad/logo_comp.png' %}" alt="LMNAD">
                 </a>
                 <a class="navbar-brand" href="{% url 'tank_exp' %}"> {% trans 'Experimental basin' %} </a>
             </div>
